extensions, and hides some of the messy plumbing needed to get Python to
talk to the WMI API. It's pure Python and should work with any version of
Python from 2.1 onwards (list comprehensions) and any recent version of
pywin32.


Where do I get it?
==================

http://timgolden.me.uk/python/wmi.html


What's Changed?
===============

7th Apr 2006  1.1    . Removed redundant qualifiers method of _wmi_object (the
                       qualifiers are held as a dictionary member of the class).
                     . If a moniker is passed which doesn't start with winmgmts:
                       then add it automatically (this helps with associations).
                     . Special-cased associations, whose properties are the paths
                       of the associated classes: when the properties are requested,
                       automatically return the instantiated class.
2nd Mar 2006  1.0    . Final release for v1.0
                     . Corrected example in .new method of _wmi_namespace, 
                       deprecating the previous inappropriate example of
                       Win32_Process, and substituting Win32_ProcessStartup.
11th Feb 2006 1.0rc6 . Adjusted .set method so it won't try to .Put_ unless
                       the instance has a path (ie has not been spawned).
10th Feb 2006 1.0rc5 . Fixed small bug in .new method of _wmi_class
10th Feb 2006 1.0rc4 . Added from_time function to convert Python times to WMI
                     . Remove final Put_ from .new method as some classes are
                       not intended to be created (eg Win32_ProcessStartup).
                     . Add .put method to allow explicit instance creation.
                     . Allow user to prevent the namespace from searching for
                       valid classes at startup. This makes the startup
                       much faster, but means you don't get a list of classes.